--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -34,12 +34,8 @@
       }
 
    .recommendation_lg {
-      height: 30vh;
-      min-height: 600px;
       display: flex;
    }
-
-   
 
 }
 
