--- a/src/pages/Home/components/CarouselBanner/SingleCarousel/SingleCarousel.module.css
+++ b/src/pages/Home/components/CarouselBanner/SingleCarousel/SingleCarousel.module.css
@@ -11,7 +11,7 @@
    margin: 0;
    padding: 1rem 2.2rem;
 
-   position: relative;
+   position: absolute;
    left: 0;
    bottom: 0;
 
