--- a/src/pages/Home/components/LargeSquareCard/LargeSquareCard.module.css
+++ b/src/pages/Home/components/LargeSquareCard/LargeSquareCard.module.css
@@ -20,8 +20,8 @@
    font-weight: bold;
    border-color: var(--primary);
 
-   position: absolute;
-   bottom: 5%;
+   position: relative;
+   bottom: 0;
 }
 
 .goBtn:hover {
